--- a/src/style.sass
+++ b/src/style.sass
@@ -6,7 +6,8 @@ body
 .frame
   background-color: white
   width: 764px
-  height: 540px
+  height: 455px
   margin: 25px auto
   padding: 35px
   border-radius: 15px
+  overflow: hidden
