--- a/src/style.sass
+++ b/src/style.sass
@@ -6,8 +6,8 @@ body
 .frame
   background-color: white
   width: 764px
-  height: 455px
+  height: 412px
   margin: 25px auto
-  padding: 35px
+  padding: 35px 39px 62px
   border-radius: 15px
   overflow: hidden
