--- a/src/Content/styles.sass
+++ b/src/Content/styles.sass
@@ -4,10 +4,20 @@
   font-family: Roboto, sans-serif
   font-size: 18px
   font-weight: 300
+  display: flex
+  flex-direction: column
+  height: inherit
 
 .arrows
-  height: 34px
+  height: 33px
   position: relative
+
+.task
+  display: flex
+  margin-bottom: 22px
+
+.solution
+  display: flex
 
 .arrow1, .arrow2, .arrow3, .arrow4
   position: absolute
@@ -22,11 +32,74 @@
   left: 33px
 
 .arrow3
-  left: 103px
+  left: 99px
 
 .arrow4
-  left: 103px
+  left: 99px
+
+.equals,
+.plus,
+.ellipsis,
+.text
+  opacity: 0
+  transition: opacity .2s
+  &.__shown
+    opacity: 1
+
+.a1
+  transform: translate(-44px, -68px)
+  transition: transform .5s
+  &.__shown
+    transform: translate(0,0)
+
+.a2
+  transform: translate(-150px, -68px)
+  transition: transform .5s
+  margin-left: -39px
+  &.__shown
+    transform: translate(0,0)
+
+.y1
+  transform: translate(40px, -68px)
+  transition: transform .5s
+  margin-right: -2px
+  &.__shown
+    transform: translate(0,0)
+
+.x1
+  transform: translate(65px, -68px)
+  transition: transform .5s
+  &.__shown
+    transform: translate(0,0)
+
+.b1
+  transform: translate(-173px, -68px)
+  transition: transform .5s
+  margin-left: -39px
+  margin-right: -1px
+  &.__shown
+    transform: translate(0,0)
+
+.x2
+  transform: translate(-138px, -68px)
+  transition: transform .5s
+  &.__shown
+    transform: translate(0,0)
+
+.b2
+  transform: translate(-274px, -68px)
+  transition: transform .5s
+  margin-left: -39px
+  margin-right: -1px
+  &.__shown
+    transform: translate(0,0)
+
+.y2
+  transform: translate(-158px, -68px)
+  transition: transform .5s
+  &.__shown
+    transform: translate(0,0)
 
 .text
-  height: 21px
+  height: 41px
 
