--- a/src/Footer/styles.sass
+++ b/src/Footer/styles.sass
@@ -1,7 +1,7 @@
 .footer
   display: flex
   align-items: center
-  margin-top: 200px
+  margin-top: auto
 
 .buttonsGroupBackForward
   display: flex
