--- a/src/style.sass
+++ b/src/style.sass
@@ -1,13 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap')
+@import './stylesheet.css'
 
 body
   background-color: black
 
 .frame
+  font-family: "Yandex Sans Text", serif
+  color: #1A1B22
   background-color: white
   width: 764px
   height: 412px
-  margin: 25px auto
-  padding: 35px 39px 62px
+  box-sizing: border-box
+  margin: 80px auto 0
+  padding: 35px 32px 62px 39px
   border-radius: 15px
   overflow: hidden
