--- a/src/Footer/styles.sass
+++ b/src/Footer/styles.sass
@@ -22,8 +22,8 @@
   align-items: center
   cursor: pointer
   opacity: 0
+  transition: opacity 0.5s
   &.__visible
-    transition: opacity 0.2s, transform 0.2s
     opacity: 1
 
 
@@ -39,6 +39,7 @@
   font-size: 16px
   height: 50px
   margin-left: 16px
+  user-select: none
 
 .reset
   border-radius: 50px
@@ -57,8 +58,9 @@
   height: 21px
 
 .counterText
+  font-size: 16px
   position: absolute
-  left: 0
+  left: -3px
   white-space: nowrap
 
 
